<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="androidx.recyclerview.widget.RecyclerView"/>
        <variable
            name="adapter"
            type="com.julienbirabent.fakeproductscatalogue.ui.adapter.OmniAdapter" />

        <variable
            name="viewModel"
            type="com.julienbirabent.fakeproductscatalogue.viewmodel.WishListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_header_wish_list"
            style="@style/HeaderMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_your_wish_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_total_cost"
            style="@style/HeaderMedium.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/text_total_cost, viewModel.totalCost)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/wish_list"
            layout="@layout/component_list_with_loading_indicator"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_header_wish_list"
            bind:adapter="@{adapter}"
            bind:orientation="@{RecyclerView.VERTICAL}"
            bind:isLoading="@{viewModel.isLoading}" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/text_header_sub_total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_header_sub_total"
            style="@style/HeaderMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_sub_total_cost"
            android:textAlignment="viewEnd"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/text_world_wide_shipping"
            app:layout_constraintEnd_toStartOf="@+id/text_total_cost_bottom"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_total_cost_bottom"
            style="@style/HeaderMedium.Light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/can_dollar_sign, viewModel.totalCost)}"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toTopOf="@id/text_world_wide_shipping"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_header_sub_total" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_world_wide_shipping"
            style="@style/HeaderSmall.Green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/header_free_shipping_worldwide"
            app:layout_constraintBottom_toTopOf="@id/button_checkout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_checkout"
            style="@style/ButtonLarge"
            android:backgroundTint="@color/red"
            android:text="@string/text_proceed_to_check_out"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>