<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="colorAdapter"
            type="com.julienbirabent.fakeproductscatalogue.ui.adapter.DataBindingRecyclerviewAdapter" />

        <variable
            name="viewModel"
            type="com.julienbirabent.fakeproductscatalogue.viewmodel.ProductListViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        style="@style/ViewContainer"
        android:padding="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.40" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.35" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/white"
                app:layout_constraintBottom_toTopOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_product"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:paddingTop="8dp"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toTopOf="@id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_details"
                style="@style/CardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_huge"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_world_wide"
                        style="@style/HeaderSmall.Green"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/header_free_shipping_worldwide"
                        app:layout_constraintBaseline_toBaselineOf="@id/text_price"
                        app:layout_constraintStart_toEndOf="@id/text_price"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view_divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/slight_dark_gray"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_price" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        style="@style/HeaderSmall"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/text_price"
                        app:layout_constraintTop_toBottomOf="@id/view_divider" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_header_color_list"
                        style="@style/HeaderProductDetails"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/header_colors"
                        app:layout_constraintStart_toStartOf="@+id/text_header_dimensions"
                        app:layout_constraintTop_toBottomOf="@id/text_description" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_colors"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:padding="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/text_header_color_list"
                        app:layout_constraintTop_toTopOf="@id/text_header_color_list"
                        app:setAdapter="@{colorAdapter}" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_header_dimensions"
                        style="@style/HeaderProductDetails"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/header_sizes"
                        app:layout_constraintEnd_toStartOf="@id/list_colors"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/list_colors" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_dimensions"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/text_header_dimensions"
                        app:layout_constraintTop_toTopOf="@id/text_header_dimensions" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
